rgbds-0.6.1/test/asm/purge-refs.err
error: purge-refs.asm(6):
    Symbol "Floating" is referenced and thus cannot be purged
error: Assembly aborted (1 error)!
